--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -23,26 +23,29 @@
       </a>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-center">
-      Всего постов автора:  <span >{{ post.author.posts.count }}</span>
+      Всего постов автора:  <span>{{ post.author.posts.count }}</span>
     </li>
   </ul>
 </aside>
-<article class="col-12 col-md-9">
+<article class="card mb-5 col-12 col-md-9">
   {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-  <img class="card-img my-2" src="{{ im.url }}">
+  <img class="card-img-top" src="{{ im.url }}">
 {% endthumbnail %}
-<p>{{ post.text }}</p>
-{% if user.id == post.author.id %}
-  <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
-    редактировать запись
-  </a>
-  <a class="btn btn-primary"
-     onclick="return confirm('Are you sure?');"
-     href="{% url 'posts:post_delete' post.id %}">
-    удалить запись
-  </a>
-{% endif %}
-{% include "posts/includes/comment.html" %}
+<div class="card-body">
+  <h5 class="card-title">{{ post }}</h5>
+  <p class="card-text">{{ post.text }}</p>
+  {% if user.id == post.author.id %}
+    <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
+      редактировать запись
+    </a>
+    <a class="btn btn-primary"
+       onclick="return confirm('Are you sure?');"
+       href="{% url 'posts:post_delete' post.id %}">
+      удалить запись
+    </a>
+  {% endif %}
+  {% include "posts/includes/comment.html" %}
+</div>
 </article>
 </div>
 {% endblock content %}
