--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -3,27 +3,40 @@
   Профайл пользователя {{ author.username }}
 {% endblock title %}
 {% block content %}
-  <div class="mb-5">
-    <h4>Все посты пользователя {{ author.get_full_name }}</h4>
-    <h5>Всего постов: {{ author.posts.count }}</h5>
-    <p>Подписчиков: {{ followers }}</p>
-    {% if following and author.username != request.user.username  %}
-      <a class="btn btn-lg btn-light"
-         href="{% url 'posts:profile_unfollow' author.username %}"
-         role="button">
-        Отписаться
-      </a>
-    {% elif author.username != request.user.username %}
-      <a class="btn btn-lg btn-primary"
-         href="{% url 'posts:profile_follow' author.username %}"
-         role="button">
-        Подписаться
-      </a>
-    {% endif %}
+  <div class="row">
+    <aside class="col-12 col-md-3">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <h4>{{ author.get_full_name }}</h4>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Всего постов: <span>{{ author.posts.count }}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Подписчиков:  <span>{{ followers }}</span>
+        </li>
+        {% if following and author.username != request.user.username  %}
+          <a class="btn btn-md btn-light"
+             href="{% url 'posts:profile_unfollow' author.username %}"
+             role="button">
+            Отписаться
+          </a>
+        {% elif author.username != request.user.username %}
+          <a class="btn btn-md btn-primary btn-dark"
+             href="{% url 'posts:profile_follow' author.username %}"
+             role="button">
+            Подписаться
+          </a>
+        {% endif %}
+      </ul>
+    </aside>
+    <article class="col-12 col-md-9">
+      <h4 class="mb-5">Все посты пользователя {{ author.get_full_name }}</h4>
+      {% for post in page_obj %}
+        {% include "posts/includes/post.html" with grouplink=True %}
+        {% if not forloop.last %}<hr>{% endif %}
+      {% endfor %}
+      {% include "includes/paginator.html" %}
+    </article>
   </div>
-  {% for post in page_obj %}
-    {% include "posts/includes/post.html" with grouplink=True %}
-    {% if not forloop.last %}<hr>{% endif %}
-  {% endfor %}
-  {% include "includes/paginator.html" %}
 {% endblock content %}
