--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -7,9 +7,7 @@
   <div class="row">
     <aside class="col-12 col-md-3 mb-3">
       <div class="card">
-        <img src="{% static "img/portrait.jpg" %}"
-             class="card-img-top"
-             alt="portrait">
+        <img src="{% static "img/portrait.jpg" %}" class="card-img-top" alt="portrait">
         <div class="card-body">
           <h5 class="card-title">Портгас Д. Эйс</h5>
           <ul class="list-group list-group-flush">
