--- a/yatube/templates/form.html
+++ b/yatube/templates/form.html
@@ -8,8 +8,7 @@
         {% endblock card_header %}
         <div class="card-body">
           {% include "includes/form_errors.html" %}
-          <form method="post"
-                {% if action_url %} action="{% url action_url %}" {% endif %}>
+          <form method="post" {% if action_url %} action="{% url action_url %}" {% endif %}>
             {% csrf_token %}
             {% for field in form %}
               <div class="form-group row my-3"
