--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -13,20 +13,22 @@
           Всего постов: <span>{{ author.posts.count }}</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          Подписчиков:  <span>{{ followers }}</span>
+          Подписчиков:  <span>{{ author.following.count }}</span>
         </li>
-        {% if following and author.username != request.user.username  %}
-          <a class="btn btn-md btn-light"
-             href="{% url 'posts:profile_unfollow' author.username %}"
-             role="button">
-            Отписаться
-          </a>
-        {% elif author.username != request.user.username %}
-          <a class="btn btn-md btn-primary btn-dark"
-             href="{% url 'posts:profile_follow' author.username %}"
-             role="button">
-            Подписаться
-          </a>
+        {% if user.is_authenticated and author.username != request.user.username %}
+          {% if following %}
+            <a class="btn btn-md btn-light"
+               href="{% url 'posts:profile_unfollow' author.username %}"
+               role="button">
+              Отписаться
+            </a>
+          {% else %}
+            <a class="btn btn-md btn-primary btn-dark"
+               href="{% url 'posts:profile_follow' author.username %}"
+               role="button">
+              Подписаться
+            </a>
+          {% endif %}
         {% endif %}
       </ul>
     </aside>
@@ -34,7 +36,6 @@
       <h4 class="mb-5">Все посты пользователя {{ author.get_full_name }}</h4>
       {% for post in page_obj %}
         {% include "posts/includes/post.html" with grouplink=True %}
-        {% if not forloop.last %}<hr>{% endif %}
       {% endfor %}
       {% include "includes/paginator.html" %}
     </article>
